# mcp_tools

./: .gitignore  LICENSE  README.md  build.ps1  client.py  mcp_tool_hub.spec  pyproject.toml  server.py  setup.iss
.github/: copilot-instructions.md
.github/agents/: client_dev.agent.md  git_ops.agent.md  mcp_tester.agent.md  plugin_creator.agent.md  project_lead.agent.md  server_dev.agent.md  web_dev.agent.md
.github/instructions/: plugins.instructions.md
.github/workflows/: build.yml
api/: __init__.py  base_plugin.py  base_widget.py  config.py  protocol.py  routes.py  tool.py  types.py
client/: __init__.py  http_client.py  main_window.py  service_manager.py  theme.py
client/pages/: __init__.py  log_page.py  overview_page.py  plugin_list_page.py  settings_page.py  tool_page.py
docs/: DESIGN.md  DEVPLAN.md
plugins/: __init__.py
plugins/_template/: __init__.py  backend.py  widget.py
plugins/calculator_tool/: README.md  __init__.py  backend.py
plugins/doc_converter_tool/: README.md  __init__.py  backend.py  widget.py
plugins/http_tool/: __init__.py  backend.py  widget.py
plugins/icon_tool/: __init__.py  backend.py  widget.py
plugins/image_tool/: README.md  __init__.py  backend.py  widget.py
plugins/json_tool/: README.md  __init__.py  backend.py  widget.py
plugins/markitdown_tool/: README.md  __init__.py  backend.py  widget.py
plugins/modbus_tool/: README.md  __init__.py  backend.py
plugins/network_tool/: README.md  __init__.py  backend.py
plugins/ocr_tool/: README.md  __init__.py  backend.py  (+1 more)
scripts/: gen_icon.py  modbus_server.py
server/: __init__.py  app.py  database.py  management_api.py  plugin_manager.py  registry.py  router.py
tests/: test_network_tool.py
utils/: __init__.py  logger.py  paths.py
web/: index.html  package-lock.json  package.json  vite.config.js
(+21 files in other folders)
