[project]
name = "mcp-tool-hub"
version = "0.1.0"
description = "集成式 MCP 工具平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pyside6>=6.6.0",
    "pyside6-fluent-widgets>=1.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "server", "plugins", "ui", "utils"]
