[project]
name = "mcp-tool-hub"
version = "0.2.0"
description = "集成式 MCP 工具平台"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pyside6>=6.6.0",
    "pyside6-fluent-widgets>=1.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pyinstaller>=6.20.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.6",
    "sympy>=1.14.0",
    "pendulum>=3.2.0",
    "pint>=0.25.3",
    "qrcode>=8.2",
    "python-barcode[images]>=0.16.1",
    "pyzbar>=0.1.9",
    "jmespath>=1.0.1",
    "pytesseract>=0.3.10",
    "pymodbus>=3.7.0",
    "psutil>=6.0.0",
    "paramiko>=3.4.0",
    "cryptography>=43.0.0",
    "pypandoc>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "server", "plugins", "client", "utils"]
